# outlook-mcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/outlook_mcp/: __init__.py  server.py  timezones.py
tests/: test_email_helpers.py  test_helpers.py  test_timezones.py
